--- a/src/app/features/auth/_components/sign-up/sign-up.component.scss
+++ b/src/app/features/auth/_components/sign-up/sign-up.component.scss
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  background: #fff;
+  // background: #fff;
   padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   margin: auto;
 
@@ -61,7 +61,7 @@
   .submit-btn {
     width: 100%;
     padding: 12px;
-    background-color: #000;
+    background-color: #682f12;
     color: white;
     border: none;
     border-radius: 4px;
@@ -88,6 +88,11 @@
     border-top: 2px solid #007bff;
     border-radius: 50%;
     animation: spin 0.8s linear infinite;
+  }
+
+  .error-message {
+    font-size: 12px;
+    color: red;
   }
 
   @keyframes spin {
