--- a/src/app/features/auth/_components/login/login.component.scss
+++ b/src/app/features/auth/_components/login/login.component.scss
@@ -85,13 +85,14 @@
         }
 
         .resend-otp-link {
-          color: #d9534f;
-          font-weight: bold;
+          color: #682f12;
+          text-decoration: underline;
           cursor: pointer;
+          font-weight: bold;
           transition: color 0.3s ease;
 
           &:hover {
-            color: #c9302c;
+            color: #682f12;
           }
         }
 
@@ -239,13 +240,13 @@
 }
 
 .loader {
-margin-left: 5px;
-border: 2px solid transparent;
-border-top: 2px solid #fff;
-border-radius: 50%;
-width: 12px;
-height: 12px;
-animation: spin 0.8s linear infinite;
+  margin-left: 5px;
+  border: 2px solid transparent;
+  border-top: 2px solid #fff;
+  border-radius: 50%;
+  width: 12px;
+  height: 12px;
+  animation: spin 0.8s linear infinite;
 }
 
 @keyframes spin {
