--- a/src/app/features/auth/_components/sign-up/sign-up.component.scss
+++ b/src/app/features/auth/_components/sign-up/sign-up.component.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  padding: 20px;
+  // padding: 20px;
   border-radius: 8px;
   max-width: 400px;
   margin: auto;
