--- a/src/app/shared/components/hero-section/hero-section.component.scss
+++ b/src/app/shared/components/hero-section/hero-section.component.scss
@@ -1,6 +1,6 @@
 .hero-section {
   width: 100%;
-  height: 400px; /* Adjust as per your needs */
+  height: 310px !important; /* Adjust as per your needs */
   overflow: hidden;
   position: relative;
 
