--- a/src/app/features/auth/_components/login/login.component.html
+++ b/src/app/features/auth/_components/login/login.component.html
@@ -35,7 +35,7 @@
                 </a>
               </ng-container>
               <ng-template #timerTemplate>
-                <span class="otp-timer">Resend in {{ otpCooldown }}s</span>
+                <span class="otp-timer">Resend Otp in {{ otpCooldown }}s</span>
               </ng-template>
             </ng-container>
 
@@ -102,7 +102,8 @@
         </p>
 
         <button type="submit" class="btn-signin" [disabled]="loginPasswordForm.invalid">
-          Sign In
+          <span *ngIf="!isSignInLoading">Sign In</span>
+          <span *ngIf="isSignInLoading" class="signIn-loader"></span>
         </button>
 
         <!-- Register Link -->
