--- a/src/app/features/product/_components/product/product.component.scss
+++ b/src/app/features/product/_components/product/product.component.scss
@@ -1,20 +1,29 @@
-.product-list-container {
+.scroll-container {
+  position: relative;
   display: flex;
-  gap: 15px; /* Space between items */
-  overflow-x: auto; /* Enable horizontal scrolling */
-  scroll-behavior: smooth;
-  padding: 10px;
-  white-space: nowrap; /* Prevent wrapping */
+  align-items: center;
+  width: 100%;
 }
 
-/* Hide scrollbar in webkit browsers */
-.product-list-container::-webkit-scrollbar {
-  display: none;
+.product-list-container {
+  display: flex;
+  gap: 15px;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding: 10px;
+  white-space: nowrap;
+  width: 100%;
+  scroll-snap-type: x mandatory;
+
+  /* Hide scrollbar in webkit browsers */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 /* Individual Product Styling */
 .product-card {
-  flex: 0 0 auto; /* Prevents shrinking and ensures fixed width */
+  flex: 0 0 auto;
   width: 250px;
   background-color: #fff;
   border-radius: 10px;
@@ -22,20 +31,23 @@
   overflow: hidden;
   position: relative;
   padding: 15px;
-  margin: 10px 0; /* Adjust margin for better spacing */
+  margin: 10px 0;
+  transition: transform 0.3s ease-in-out;
 
-  /* Wishlist Icon Styling */
+  &:hover {
+    transform: scale(1.05);
+  }
+
+  /* Wishlist Icon */
   .wishlist-icon {
     position: absolute;
     top: 5px;
     right: 10px;
-    font-size: 1.5rem;
-    color: #666;
     cursor: pointer;
     transition: color 0.3s;
 
     &:hover {
-      color: #f7a500; /* Gold color for hover effect */
+      color: #f7a500;
     }
   }
 
@@ -72,7 +84,7 @@
       }
 
       .product-price {
-        font-size: .8rem;
+        font-size: 0.8rem;
         color: #333;
       }
     }
@@ -85,7 +97,6 @@
 
     .product-rating {
       display: flex;
-      justify-content: flex-start;
       align-items: center;
       margin-bottom: 15px;
 
@@ -103,7 +114,7 @@
       border-radius: 25px;
       padding: 8px 20px;
       cursor: pointer;
-      font-size: .7rem;
+      font-size: 0.7rem;
       transition: background-color 0.3s;
 
       &:hover {
@@ -119,7 +130,7 @@
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.9);
   border: none;
   cursor: pointer;
   padding: 10px;
@@ -127,6 +138,7 @@
   z-index: 10;
   border-radius: 50%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease-in-out;
 
   &:hover {
     background-color: #f7a500;
