products filter on category select

--- a/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.html
+++ b/src/app/features/product/_components/detailed-product-list/detailed-product-list.component.html
@@ -13,7 +13,7 @@
       <p class="product-description">{{ product.shortDescription }}</p>
 
       <div class="product-meta">
-        <span class="price">${{ product.price }}</span>
+        <span class="price">₹{{ product.price }}</span>
         <span class="rating">⭐ {{ product.rating }}</span>
       </div>
 
